--- a/public/assets/blogs-assets/css/styles.css
+++ b/public/assets/blogs-assets/css/styles.css
@@ -1498,7 +1498,7 @@ body {
 }
 
 .swiper-slide {
-  width: 30%; /* Adjust based on how many cards you want visible */
+  width: auto; /* Adjust based on how many cards you want visible */
   margin-right: 10px; /* Optional spacing between slides */
 }
 
